[package]
name = "byte-ngram"
version = "0.1.0"
authors = ["hilbigan <darkolan2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
memmap = "0.7.0"
rayon = "1.4.1"
radix_trie = "0.2.0"
rand = "0.7.3"
parking_lot = "0.11.0"

[profile.release]
debug = true