[package]
name = "approx-byte-ngram"
version = "0.1.0"
authors = ["hilbigan <darkolan2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
memmap = "0.7.0"
rayon = "1.4.1"
radix_trie = "0.2.0"
parking_lot = "0.11.0"
either = "1.6.1"
sprs = "0.9.1"
num-traits = "0.2.12"
t1ha = "0.1.0"
rand = "0.7.3"
itertools = "0.9.0"

[profile.release]
debug = true

[lib]
name = "ngrm"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.2.2"
rand = "0.7.3"

[[bench]]
name = "benchmark"
harness = false