[package]
name = "ngrm"
version = "0.1.0"
authors = ["Aaron Hilbig"]
edition = "2018"

[dependencies]
structopt = "0.3.20"
memmap = "0.7.0"
rayon = "1.5.0"
radix_trie = "0.2.1"
parking_lot = "0.11.1"
either = "1.6.1"
sprs = "0.9.2"
num-traits = "0.2.14"
t1ha = "0.1.0"
rand = "0.7.3"
itertools = "0.9.0"

[profile.release]
debug = true

[lib]
name = "ngrm"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.2.2"

[[bench]]
name = "benchmark"
harness = false